[workspace]
members = [
  "risc0/core",
  "risc0/zkp",
  "risc0/zkp/rust",
  "risc0/zkvm",
  "risc0/zkvm/circuit",
  "risc0/zkvm/circuit/make-circuit",
  "risc0/zkvm/platform",
  "risc0/zkvm/prove/make-id",
  "risc0/zkvm/sdk/rust",
  "risc0/zkvm/sdk/rust/methods",
  "risc0/zkvm/sdk/rust/methods/inner",
]

exclude = [
   "risc0/zkvm/sdk/rust/verify",
]

[profile.release]
lto = true

[profile.bootstrap]
inherits = "release"

[workspace.metadata.workspaces]
allow_branch = "main"

